# URLShort

./: .gitignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py  metrics.py
app/api/v1/: redirect.py  router.py  shorten.py  stats.py
app/cache/: click_counter.py  url_cache.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 20250321_0001_initial.py  20250321_0002_click_analytics_indexes.py
app/middleware/: rate_limit.py
app/models/: __init__.py  click.py  url.py
app/schemas/: stats.py  url.py
app/services/: analytics.py  geo_lookup.py  shortener.py
app/utils/: base62.py
docs/images/: README.md
grafana/dashboards/: urlshort.json
grafana/provisioning/dashboards/: dashboards.yml
nginx/: nginx.conf
prometheus/: prometheus.yml
tests/: conftest.py  test_api.py  test_base62.py  test_redis_layer.py
